src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_29.deca
// Description:
//    regle 3.29 type != boolean
//
// Resultats:
//    Ligne 7: Condition is of type 'int', it must be boolean.
{
    if (1) {
    }
}

// raison : type != boolean
// message : Condition is of type 'int', it must be boolean.